--- a/styles.css
+++ b/styles.css
@@ -141,3 +141,99 @@ h1{
     height:520px ;
 
 }
+
+.github .icon {
+    animation: bounce 2s infinite; /* Aplica la animación */
+    display: inline-block; /* Asegura que cada ícono se comporte como bloque en línea */
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-10px); /* Rebote hacia arriba */
+    }
+    60% {
+        transform: translateY(-5px); /* Rebote más pequeño */
+    }
+}
+
+
+
+.about-img{
+    width: 550px;
+    height:520px ;
+    object-fit: cover;
+    margin-left: 130px;
+    margin-top: 20px;
+   
+}
+
+ .career_icons{
+    display: flex;
+    align-items: center;
+    margin-left:30px;
+}
+
+.career_icons-list>li img{
+    width: 25px;
+    height: 25px;
+    margin-right: 10px;
+}  
+
+.about {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); 
+    grid-gap: 20px; 
+    width: 100vw;
+}
+
+.career_icons {
+    list-style: none;
+    display: grid; 
+    grid-template-columns: repeat(4, 1fr); 
+    gap: 20px; 
+    margin-top: 30px;
+}
+
+.career_icons li {
+    position: relative;
+}
+
+.tooltip {
+   position: absolute;
+    bottom: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: var(--dark-blue);
+    color: var(--green);
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 12px;
+    white-space: nowrap;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+   
+}
+
+.career_icons li:hover .tooltip {
+    opacity: 1;
+    visibility: visible;
+}
+
+.about-info{
+  margin-top: 50px;
+    margin-left: 30px;
+    line-height: 1.5
+}
+
+h2{
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.about-text {
+    margin-bottom: 20px;
+}
