--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-:root{
+:root {
     --green: #43F7D4;
     --dark-blue: #191c32;
     --white: #fff;
@@ -12,18 +12,23 @@
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: 'Montserrat', sans-serif;
 }
 
-.container{
-    width: 100vw;
-    height: 100vh;
-    background-color:#191c32;
-    color:white;
+html {
+    scroll-behavior: smooth;
 }
 
-.navbar{
+.wrapper,
+.portfolio {
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--dark-blue);
+     color: white;
+}
+
+.navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -34,37 +39,38 @@ body{
 
 
 .brand img {
-    width: 40px; /* Cambia el tamaño del logo aquí */
-    height: auto; /* Mantiene la proporción del logo */
+    width: 40px;
+    height: auto;
     display: inline-block;
 }
 
-.logo{
+.logo {
     width: 60px;
-    color:white; 
+    color: white;
 
 }
 
-.logo:hover{
+.logo:hover {
     transform: scale(1.8);
 
 }
 
-.logo:active{
+.logo:active {
     transform: translateY(4px);
 }
-.menu{
+
+.menu {
     display: flex;
     list-style: none;
     justify-content: space-around;
 }
 
-.menu li{
+.menu li {
     margin: 0 15px;
-    
+
 }
 
-.menu a{
+.menu a {
     color: white;
     text-decoration: none;
     font-size: 16px;
@@ -79,12 +85,15 @@ body{
     background-size: 0% 2px;
     transition: background-size .3s;
 }
-a:hover, a:focus {
+
+a:hover,
+a:focus {
     background-size: 100% 2px;
 }
 
-a.active{
-    color: #43F7D4; /* Color al pasar el cursor */
+a.active,
+.portfolio {
+    color: #43F7D4;
 }
 
 a.btn.hello {
@@ -96,104 +105,120 @@ a.btn.hello {
 
 }
 
-.surname{
+.surname {
     color: var(--green);
 }
 
 .main {
-    margin:0 auto;
+    margin: 0 auto;
     width: 80vw;
     height: 80vh;
-    display:grid;
-    grid-template-columns:repeat(2, 1fr); 
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     align-items: center;
 
 
 }
 
-h1{
-    font-size:3em;
-   
-}
- 
+h1 {
+    font-size: 3em;
 
-.download-cv{
-    padding:10px 20px;
+}
+
+
+.download-cv
+ {
+    padding: 10px 20px;
     background-color: var(--green);
     color: var(--dark-blue);
-    border:none;
+    border: none;
     border-radius: 20px;
-    margin-top:10px;
-    cursor:pointer;
-    box-shadow:1px 3px 11px -5px rgba(102,231,200.69);
-
+    margin-top: 10px;
+    cursor: pointer;
+    box-shadow: 1px 3px 11px -5px rgba(102, 231, 200, 0.69);
 }
 
-.download-cv:hover{
+.download-cv:hover
+{
     background-color: var(--white);
     box-shadow: none;
 }
 
-
-.main img{
+.main img {
     width: 350px;
-    border:7px solid var(--green);
-    height:520px ;
+    border: 7px solid var(--green);
+    height: 520px;
 
 }
 
 .github .icon {
-    animation: bounce 2s infinite; /* Aplica la animación */
-    display: inline-block; /* Asegura que cada ícono se comporte como bloque en línea */
+    animation: bounce 2s infinite;
+    /* Aplica la animación */
+    display: inline-block;
+    /* Asegura que cada ícono se comporte como bloque en línea */
 }
 
 @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
+
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
         transform: translateY(0);
     }
+
     40% {
-        transform: translateY(-10px); /* Rebote hacia arriba */
+        transform: translateY(-10px);
+        /* Rebote hacia arriba */
     }
+
     60% {
-        transform: translateY(-5px); /* Rebote más pequeño */
+        transform: translateY(-5px);
+        /* Rebote más pequeño */
     }
 }
 
+.portfolio {
+    width: 100vw;
+    background-color: #191c32;
+    }
 
 
-.about-img{
+
+.about-img {
     width: 550px;
-    height:520px ;
+    height: 520px;
     object-fit: cover;
     margin-left: 130px;
     margin-top: 20px;
-   
+
 }
 
- .career_icons{
+.career_icons {
     display: flex;
     align-items: center;
-    margin-left:30px;
+    margin-left: 30px;
 }
 
-.career_icons-list>li img{
+.career_icons-list>li img {
     width: 25px;
     height: 25px;
     margin-right: 10px;
-}  
+}
 
 .about {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); 
-    grid-gap: 20px; 
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
     width: 100vw;
 }
 
 .career_icons {
     list-style: none;
-    display: grid; 
-    grid-template-columns: repeat(4, 1fr); 
-    gap: 20px; 
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
     margin-top: 30px;
 }
 
@@ -202,7 +227,7 @@ h1{
 }
 
 .tooltip {
-   position: absolute;
+    position: absolute;
     bottom: -20px;
     left: 50%;
     transform: translateX(-50%);
@@ -215,7 +240,7 @@ h1{
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s ease, visibility 0.3s ease;
-   
+
 }
 
 .career_icons li:hover .tooltip {
@@ -223,13 +248,13 @@ h1{
     visibility: visible;
 }
 
-.about-info{
-  margin-top: 50px;
+.about-info {
+    margin-top: 50px;
     margin-left: 30px;
     line-height: 1.5
 }
 
-h2{
+h2 {
     margin-top: 20px;
     margin-bottom: 10px;
 }
@@ -237,3 +262,128 @@ h2{
 .about-text {
     margin-bottom: 20px;
 }
+
+
+/* Estilos Generales para Portfolio y Contacto */
+.portfolio,
+.contact-section {
+  width: 100vw;
+  background-color: #191c32;
+  color: #fff;
+}
+
+.portfolio-heading {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.portfolio-heading h2,
+.contact-heading h2 {
+  font-size: 2.5em;
+  color: #fff;
+}
+
+.portfolio .container {
+  width: 80vw;
+  height: 80vh;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Estilo de la Card */
+.card {
+  width: 300px;
+  background-color: #2b3058;
+  margin: 1em;
+  transform: translateY(50px); 
+  opacity: 0; 
+  transition: transform 0.5s ease, opacity 0.5s ease; 
+  animation: slideUp 0.6s forwards;
+}
+
+/* Animación de deslizamiento hacia arriba */
+.card:hover {
+  transform: translateY(0); /* Se mueve a su posición original */
+  opacity: 1; /* Se hace visible */
+}
+
+/* Animación  */
+@keyframes slideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
+.card:nth-child(1) {
+  animation-delay: 0.2s;
+}
+
+.card:nth-child(2) {
+  animation-delay: 0.4s;
+}
+
+.card:nth-child(3) {
+  animation-delay: 0.6s;
+}
+
+/* Estilos de la imagen de la tarjeta */
+.card__img {
+  width: 100%;
+  height: 180px;
+  background-image: url(assets/images/desarrollo-web-codificacion-lenguajes-programacion-css-html-js-codigo-programa-pantalla-portatil_530733-2087.png);
+  background-size: cover;
+}
+
+
+.card__title {
+  padding: 20px;
+}
+
+.card__proyect-links {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.card__proyect-links a {
+  color: #fff;
+  text-decoration: none;
+  opacity: 0.7; 
+  transition: opacity 0.3s ease; 
+}
+
+.card__proyect-links a:hover {
+  opacity: 1; 
+}
+
+.card__proyect-links i {
+  font-size: 1.5em;
+}
+
+
+.button-content {
+  display: flex;
+  justify-content: center;
+  margin: 1em;
+}
+
+.project-details-button a {
+  text-decoration: none;
+  color: #191c32;
+  opacity: 0.7; 
+  transition: opacity 0.3s ease; 
+}
+
+.project-details-button a:hover {
+  opacity: 1; 
+}
+
