--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,8 @@
     box-sizing: border-box;
 }
 
-body, html {
+body,
+html {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
@@ -23,11 +24,12 @@ html {
     scroll-behavior: smooth;
 }
 
-.wrapper, .portfolio {
-    width: 100%; 
-    height: 100vh;
+.wrapper,
+.portfolio {
+    width: 100%;
+    /* height: 100vh; */
     background-color: var(--dark-blue);
-    color:var(--white);
+    color: var(--white);
 }
 
 .navbar {
@@ -64,22 +66,24 @@ html {
     justify-content: space-around;
 }
 
-.header__menu{
+.header__menu {
     position: relative;
     display: none;
     margin-right: 40px;
 }
 
-#burger-activador{
+#burger-activador {
     display: none;
 
 }
 
-#menu , #close{
+#menu,
+#close {
     position: absolute;
 
 
 }
+
 .menu li {
     margin: 0 15px;
 }
@@ -100,12 +104,14 @@ html {
     transition: background-size .3s;
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
     background-size: 100% 2px;
 }
 
-a.active, .portfolio {
-    color:var(--green);
+a.active,
+.portfolio {
+    color: var(--green);
 }
 
 a.btn.hello {
@@ -123,10 +129,11 @@ a.btn.hello {
 .main {
     margin: 0 auto;
     width: 80vw;
-    height: 80vh;
+    /* height: 80vh; */
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
+    padding-top: 40px;
 }
 
 h1 {
@@ -161,19 +168,26 @@ h1 {
 }
 
 @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
+
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
         transform: translateY(0);
     }
+
     40% {
         transform: translateY(-10px);
     }
+
     60% {
         transform: translateY(-5px);
     }
 }
 
 .portfolio {
-    width: 100%; 
+    width: 100%;
     background-color: #191c32;
 }
 
@@ -191,7 +205,7 @@ h1 {
     margin-left: 30px;
 }
 
-.career_icons-list > li img {
+.career_icons-list>li img {
     width: 25px;
     height: 25px;
     margin-right: 10px;
@@ -201,7 +215,7 @@ h1 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
-    width: 100%; 
+    width: 100%;
 }
 
 .career_icons {
@@ -252,20 +266,22 @@ h2 {
     margin-bottom: 20px;
 }
 
-.portfolio, .contact-section {
-    width: 100%; 
+.portfolio,
+.contact-section {
+    width: 100%;
     background-color: #191c32;
     color: var(--white);
 }
 
 .portfolio-heading {
-    width: 100%; 
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.portfolio-heading h2, .contact-heading h2 {
+.portfolio-heading h2,
+.contact-heading h2 {
     font-size: 2.5em;
     color: var(--white);
 }
@@ -299,6 +315,7 @@ h2 {
         opacity: 0;
         transform: translateY(50px);
     }
+
     100% {
         opacity: 1;
         transform: translateY(0);
@@ -392,10 +409,12 @@ h2 {
         transform: translateY(0px);
         opacity: 0;
     }
+
     50% {
         transform: translateY(-20px);
         opacity: 1;
     }
+
     100% {
         transform: translateY(0px);
         opacity: 0;
@@ -444,12 +463,14 @@ h2 {
     text-decoration: none;
 }
 
-.contact__icons-email, .contact__icons-location {
+.contact__icons-email,
+.contact__icons-location {
     display: flex;
     justify-content: center;
 }
 
-.contact__icons-email i, .contact__icons-location i {
+.contact__icons-email i,
+.contact__icons-location i {
     margin-right: 10px;
     font-size: 20px;
     color: var(--green);
@@ -463,7 +484,7 @@ h2 {
 
 footer {
     background-color: var(--dark-blue);
-    width: 100%; 
+    width: 100%;
 }
 
 footer p {
@@ -476,6 +497,7 @@ footer p {
 
 
 @media (max-width: 640px) {
+
     /* Ocultar el icono de cerrar por defecto */
     #close {
         display: none;
@@ -494,19 +516,19 @@ footer p {
     }
 
     /* Cuando el checkbox está marcado */
-    #burger-activador:checked + .burger-label #menu {
+    #burger-activador:checked+.burger-label #menu {
         display: none;
     }
 
-    #burger-activador:checked + .burger-label #close {
+    #burger-activador:checked+.burger-label #close {
         display: block;
     }
 
-    .header__menu:has(#burger-activador:checked) + .menu {
+    .header__menu:has(#burger-activador:checked)+.menu {
         display: block;
     }
 
-    .header__menu:has(#burger-activador:not(:checked))+ .menu {
+    .header__menu:has(#burger-activador:not(:checked))+.menu {
         display: none;
     }
 
@@ -515,29 +537,200 @@ footer p {
         position: absolute;
         top: 100px;
         left: 0;
+
+
         width: 100%;
         /* height: 100vh; */
-        background-color: var(--dark-blue);
+        background-color: rgb(25, 28, 50, 0.9);
         display: flex;
         flex-direction: column;
-      justify-content: space-between;
-       gap: 20px;
-       padding-bottom: 40px;
+        justify-content: space-between;
+        gap: 20px;
+        padding-bottom: 40px;
         /* height: 300px; */
 
-       
-       
+
+
     }
 
-    .menu li{
+    .menu li {
         text-align: center;
         margin: 0 auto;
         padding: 10px;
     }
 
-    
-    
-    
+    .main {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 30px;
+        padding-top: 20px;
+    }
+
+    .about-img {
+        margin: 0 auto;
+         display:flex;
+        flex-direction:column;
+    }
+
+    .about-text {
+        margin: 0 auto;
+        
+    }
+
+    .about-info {
+        margin: 0 auto;
+     
+    }
+
+    .divider{
+        margin: 0 auto;
+        
+    }
+
+
+    .main {
+        width: 100%;
+        grid-template-columns: 1fr;
+        text-align: center;
+        padding-top: 20px;
+    }
+
+    .main img {
+        width: 80%;
+        height: auto;
+        border-width: 5px;
+    }
+
+    h1 {
+        font-size: 2em;
+    }
+
+    .download-cv {
+        font-size: 14px;
+        padding: 8px 16px;
+        border-radius: 15px;
+    }
+
+    .about {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    .about-img {
+        width: 90%;
+        height: auto;
+        margin: 0 auto;
+    }
+
+    .about-info {
+        margin: 20px 10px;
+        text-align: center;
+    }
+
+    .career_icons {
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: center;
+        gap: 15px;
+        margin: 20px auto;
+        padding: 0;
+    }
+
+    .career_icons li img {
+        width: 40px;
+        height: 40px;
+    }
+
+    .tooltip {
+        font-size: 10px;
+        padding: 3px 6px;
+    }
+
+    .portfolio .container {
+        width: 90%;
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .portfolio-heading h2 {
+        font-size: 2em;
+        text-align: center;
+    }
+
+    .card {
+        width: 90%;
+        margin: 15px auto;
+    }
+
+    .card__img {
+        height: 150px;
+        background-size: contain;
+        background-position: center;
+    }
+
+    .card__title h2 {
+        font-size: 1.2em;
+        text-align: center;
+    }
+
+    .card__title p {
+        font-size: 0.9em;
+        text-align: center;
+    }
+
+    .card__proyect-links {
+        justify-content: center;
+        gap: 15px;
+    }
+
+    .card__proyect-links i {
+        font-size: 1.2em;
+    }
+
+    .button-content {
+        margin: 10px 0;
+    }
+
+    .project-details-button {
+        font-size: 14px;
+        padding: 8px 12px;
+    }
+    .contact-section {
+        padding: 2em 1em;
+        text-align: center;
+    }
+
+    .container-contact {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contact-section img {
+        width: 90%;
+        height: auto;
+        margin: 0 auto 20px auto;
+        animation: none;
+    }
+
+    .contact-form {
+        margin-left: 0;
+        width: 100%;
+    }
+
+    .form-group {
+        width: 100%;
+    }
+
+    .form-group .input,
+    .form-group textarea {
+        width: 90%;
+        margin: 0 auto 1em auto;
+    }
+
+    .btn-submit {
+        width: 90%;
+        font-size: 14px;
+        padding: 10px;
+    }
 }
-
-
