--- a/styles.css
+++ b/styles.css
@@ -559,6 +559,14 @@ footer p {
         padding: 10px;
     }
 
+   .info-content{
+    padding-bottom: 20px;
+   }
+
+    #ana{
+        padding-top: 20px;
+    }
+
     .main {
         display: flex;
         flex-direction: column;
@@ -605,6 +613,8 @@ footer p {
         font-size: 2em;
     }
 
+  
+
     .download-cv {
         font-size: 14px;
         padding: 8px 16px;
@@ -616,10 +626,13 @@ footer p {
         text-align: center;
     }
 
+    
+
     .about-img {
         width: 90%;
         height: auto;
         margin: 0 auto;
+        animation:block 1s ease-in-out;
     }
 
     .about-info {
@@ -706,11 +719,15 @@ footer p {
         align-items: center;
     }
 
+
+    #contact{
+        animation: block 1s ease-in-out;
+    }
     .contact-section img {
         width: 90%;
         height: auto;
         margin: 0 auto 20px auto;
-        animation: none;
+        animation: block 1s ease-in-out;
     }
 
     .contact-form {
@@ -732,5 +749,97 @@ footer p {
         width: 90%;
         font-size: 14px;
         padding: 10px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .contact-section {
+        padding: 5em;
+    }
+
+    .container-contact {
+        max-width: 1200px;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .contact-section img {
+        width: 600px;
+        height: 600px;
+        margin-left: 100px;
+        animation: moveUp 3s ease-in-out infinite;
+    }
+
+    .contact-form {
+        margin-left: 100px;
+        width: 50%;
+    }
+
+    .form-group {
+        width: 40vw;
+    }
+
+    .form-group .input,
+    .form-group textarea {
+        font-size: 1.2em;
+        padding: 15px;
+        width: 100%;
+    }
+
+    .btn-submit {
+        font-size: 1.2em;
+        padding: 15px 30px;
+        cursor: pointer;
+        transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+    .btn-submit:hover {
+        background-color: var(--white);
+        color: var(--dark-blue);
+    }
+
+    
+}
+
+@media screen and (min-width: 641px) and (max-width: 1024px) {
+    .contact-section {
+        padding: 4em 2em;
+    }
+
+    .container-contact {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .contact-section img {
+        width: 70%;
+        height: auto;
+        margin: 0 auto 30px auto;
+        animation: none;
+    }
+
+    .contact-form {
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .form-group {
+        width: 100%;
+    }
+
+    .form-group .input,
+    .form-group textarea {
+        width: 100%;
+        font-size: 1em;
+        padding: 12px;
+    }
+
+    .btn-submit {
+        width: 100%;
+        font-size: 1em;
+        padding: 12px;
+        cursor: pointer;
     }
 }
