--- a/styles.css
+++ b/styles.css
@@ -257,7 +257,7 @@ h1 {
     line-height: 1.5;
 }
 
-h2 {
+ .about-info h2 {
     margin-top: 20px;
     margin-bottom: 10px;
 }
@@ -284,6 +284,8 @@ h2 {
 .contact-heading h2 {
     font-size: 2.5em;
     color: var(--white);
+    padding-left: 100px;
+    margin-bottom: 20px;
 }
 
 .portfolio .container {
@@ -393,13 +395,13 @@ h2 {
 }
 
 .contact-form {
-    margin-left: 80px;
+    margin-left: 50px;
 }
 
 .contact-section img {
     width: 500px;
     height: 500px;
-    margin-left: 50px;
+    margin-left: 30px;
     bottom: 0px;
     animation: moveUp 2s ease-in-out infinite;
 }
@@ -559,9 +561,7 @@ footer p {
         padding: 10px;
     }
 
-   .info-content{
-    padding-bottom: 20px;
-   }
+  
 
     #ana{
         padding-top: 20px;
@@ -666,10 +666,7 @@ footer p {
         justify-content: center;
     }
 
-    .portfolio-heading h2 {
-        font-size: 2em;
-        text-align: center;
-    }
+    
 
     .card {
         width: 90%;
@@ -710,7 +707,15 @@ footer p {
         padding: 8px 12px;
     }
     .contact-section {
-        padding: 2em 1em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .contact-section h2 {
+        font-size: 2.5em;
+        margin-bottom: 10px;
         text-align: center;
     }
 
@@ -768,17 +773,17 @@ footer p {
     .contact-section img {
         width: 600px;
         height: 600px;
-        margin-left: 100px;
+        /* margin-left: 80px; */
         animation: moveUp 3s ease-in-out infinite;
     }
 
     .contact-form {
-        margin-left: 100px;
+        margin-left: 80px;
         width: 50%;
     }
 
     .form-group {
-        width: 40vw;
+        width: 30vw;
     }
 
     .form-group .input,
