--- a/styles.css
+++ b/styles.css
@@ -160,12 +160,15 @@ h1 {
     width: 350px;
     border: 7px solid var(--green);
     height: 520px;
+    padding-bottom: 20px;
 }
 
 .github .icon {
     animation: bounce 2s infinite;
     display: inline-block;
 }
+
+
 
 @keyframes bounce {
 
@@ -185,6 +188,15 @@ h1 {
         transform: translateY(-5px);
     }
 }
+
+.github a {
+    text-decoration: none;
+  }
+  
+  .github a:hover .icon {
+    transform: scale(1.1); 
+    transition: transform 0.3s; 
+  }
 
 .portfolio {
     width: 100%;
@@ -216,6 +228,7 @@ h1 {
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
     width: 100%;
+   
 }
 
 .career_icons {
@@ -278,13 +291,15 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-left: 80px;
+    padding-top: 20px;
+    
 }
 
 .portfolio-heading h2,
 .contact-heading h2 {
     font-size: 2.5em;
     color: var(--white);
-    padding-left: 100px;
     margin-bottom: 20px;
 }
 
@@ -391,7 +406,6 @@ h1 {
 .container-contact {
     margin: 0 auto;
     display: flex;
-    align-items: center;
 }
 
 .contact-form {
@@ -677,6 +691,7 @@ footer p {
         height: 150px;
         background-size: contain;
         background-position: center;
+        background-size: cover;
     }
 
     .card__title h2 {
