--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
     --green: #43F7D4;
@@ -301,6 +301,7 @@ h1 {
     font-size: 2.5em;
     color: var(--white);
     margin-bottom: 20px;
+    font-family: 'Inter', sans-serif;
 }
 
 .portfolio .container {
